soporte movil coche Golf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,18 +19,21 @@ INCLUDE_DIRECTORIES("/usr/include/ooml")
  
 #Set a variable with the name of the cpp source files of your application
 SET(BASE_FILES base.cpp)
+SET(SOPORTEGOLF_FILES soportegolf.cpp)
 
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
+SET(SOPORTEGOLF_NAME soportegolf)
 
  
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
+ADD_EXECUTABLE(${SOPORTEGOLF_NAME} ${SOPORTEGOLF_FILES})
 
 
 TARGET_LINK_LIBRARIES(${BASE_NAME} OOMLCore OOMLComponents OOMLParts)
-
+TARGET_LINK_LIBRARIES(${SOPORTEGOLF_NAME} OOMLCore OOMLComponents OOMLParts)
 
 
 
