--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,21 +21,25 @@ INCLUDE_DIRECTORIES("/usr/include/ooml")
 SET(BASE_FILES base.cpp)
 SET(SOPORTEGOLF_FILES soportegolf.cpp)
 SET(PIEZACUNA_FILES piezacuna.cpp)
+SET(PASTILLERO_FILES pastillero.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
 SET(SOPORTEGOLF_NAME soportegolf)
 SET(PIEZACUNA_NAME piezacuna)
+SET(PASTILLERO_NAME pastillero)
  
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
 ADD_EXECUTABLE(${SOPORTEGOLF_NAME} ${SOPORTEGOLF_FILES})
 ADD_EXECUTABLE(${PIEZACUNA_NAME} ${PIEZACUNA_FILES})
+ADD_EXECUTABLE(${PASTILLERO_NAME} ${PASTILLERO_FILES})
 
 
 TARGET_LINK_LIBRARIES(${BASE_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${SOPORTEGOLF_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PIEZACUNA_NAME} OOMLCore OOMLComponents OOMLParts)
+TARGET_LINK_LIBRARIES(${PASTILLERO_NAME} OOMLCore OOMLComponents OOMLParts)
 
 
 
