--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,24 +22,29 @@ SET(BASE_FILES base.cpp)
 SET(SOPORTEGOLF_FILES soportegolf.cpp)
 SET(PIEZACUNA_FILES piezacuna.cpp)
 SET(PASTILLERO_FILES pastillero.cpp)
+SET(ESPEJO_FILES espejo.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
 SET(SOPORTEGOLF_NAME soportegolf)
 SET(PIEZACUNA_NAME piezacuna)
 SET(PASTILLERO_NAME pastillero)
+SET(ESPEJO_NAME espejo)
  
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
 ADD_EXECUTABLE(${SOPORTEGOLF_NAME} ${SOPORTEGOLF_FILES})
 ADD_EXECUTABLE(${PIEZACUNA_NAME} ${PIEZACUNA_FILES})
 ADD_EXECUTABLE(${PASTILLERO_NAME} ${PASTILLERO_FILES})
+ADD_EXECUTABLE(${ESPEJO_NAME} ${ESPEJO_FILES})
+
 
 
 TARGET_LINK_LIBRARIES(${BASE_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${SOPORTEGOLF_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PIEZACUNA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PASTILLERO_NAME} OOMLCore OOMLComponents OOMLParts)
+TARGET_LINK_LIBRARIES(${ESPEJO_NAME} OOMLCore OOMLComponents OOMLParts)
 
 
 
