--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(SOPORTEGOLF_FILES soportegolf.cpp)
 SET(PIEZACUNA_FILES piezacuna.cpp)
 SET(PASTILLERO_FILES pastillero.cpp)
 SET(ESPEJO_FILES espejo.cpp)
+SET(PALOMETABACA_FILES palometa_baca.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
@@ -30,13 +31,15 @@ SET(SOPORTEGOLF_NAME soportegolf)
 SET(PIEZACUNA_NAME piezacuna)
 SET(PASTILLERO_NAME pastillero)
 SET(ESPEJO_NAME espejo)
- 
+SET(PALOMETABACA_NAME palometa_baca)
+
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
 ADD_EXECUTABLE(${SOPORTEGOLF_NAME} ${SOPORTEGOLF_FILES})
 ADD_EXECUTABLE(${PIEZACUNA_NAME} ${PIEZACUNA_FILES})
 ADD_EXECUTABLE(${PASTILLERO_NAME} ${PASTILLERO_FILES})
 ADD_EXECUTABLE(${ESPEJO_NAME} ${ESPEJO_FILES})
+ADD_EXECUTABLE(${PALOMETABACA_NAME} ${PALOMETABACA_FILES})
 
 
 
@@ -45,6 +48,7 @@ TARGET_LINK_LIBRARIES(${SOPORTEGOLF_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PIEZACUNA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PASTILLERO_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${ESPEJO_NAME} OOMLCore OOMLComponents OOMLParts)
+TARGET_LINK_LIBRARIES(${PALOMETABACA_NAME} OOMLCore OOMLComponents OOMLParts)
 
 
 
