--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(PIEZACUNA_FILES piezacuna.cpp)
 SET(PASTILLERO_FILES pastillero.cpp)
 SET(ESPEJO_FILES espejo.cpp)
 SET(PALOMETABACA_FILES palometa_baca.cpp)
+SET(PERCHA_FILES percha.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
@@ -32,6 +33,7 @@ SET(PIEZACUNA_NAME piezacuna)
 SET(PASTILLERO_NAME pastillero)
 SET(ESPEJO_NAME espejo)
 SET(PALOMETABACA_NAME palometa_baca)
+SET(PERCHA_NAME percha)
 
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
@@ -40,6 +42,7 @@ ADD_EXECUTABLE(${PIEZACUNA_NAME} ${PIEZACUNA_FILES})
 ADD_EXECUTABLE(${PASTILLERO_NAME} ${PASTILLERO_FILES})
 ADD_EXECUTABLE(${ESPEJO_NAME} ${ESPEJO_FILES})
 ADD_EXECUTABLE(${PALOMETABACA_NAME} ${PALOMETABACA_FILES})
+ADD_EXECUTABLE(${PERCHA_NAME} ${PERCHA_FILES})
 
 
 
@@ -49,6 +52,6 @@ TARGET_LINK_LIBRARIES(${PIEZACUNA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PASTILLERO_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${ESPEJO_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PALOMETABACA_NAME} OOMLCore OOMLComponents OOMLParts)
-
+TARGET_LINK_LIBRARIES(${PERCHA_NAME} OOMLCore OOMLComponents OOMLParts)
 
 
