--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(PASTILLERO_FILES pastillero.cpp)
 SET(ESPEJO_FILES espejo.cpp)
 SET(PALOMETABACA_FILES palometa_baca.cpp)
 SET(PERCHA_FILES percha.cpp)
+SET(VENTILADOR_FILES ventilador.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
@@ -34,6 +35,7 @@ SET(PASTILLERO_NAME pastillero)
 SET(ESPEJO_NAME espejo)
 SET(PALOMETABACA_NAME palometa_baca)
 SET(PERCHA_NAME percha)
+SET(VENTILADOR_NAME ventilador)
 
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
@@ -43,6 +45,7 @@ ADD_EXECUTABLE(${PASTILLERO_NAME} ${PASTILLERO_FILES})
 ADD_EXECUTABLE(${ESPEJO_NAME} ${ESPEJO_FILES})
 ADD_EXECUTABLE(${PALOMETABACA_NAME} ${PALOMETABACA_FILES})
 ADD_EXECUTABLE(${PERCHA_NAME} ${PERCHA_FILES})
+ADD_EXECUTABLE(${VENTILADOR_NAME} ${VENTILADOR_FILES})
 
 
 
@@ -53,5 +56,4 @@ TARGET_LINK_LIBRARIES(${PASTILLERO_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${ESPEJO_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PALOMETABACA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PERCHA_NAME} OOMLCore OOMLComponents OOMLParts)
-
-
+TARGET_LINK_LIBRARIES(${VENTILADOR_NAME} OOMLCore OOMLComponents OOMLParts)
