palo red pingpong

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(ESPEJO_FILES espejo.cpp)
 SET(PALOMETABACA_FILES palometa_baca.cpp)
 SET(PERCHA_FILES percha.cpp)
 SET(VENTILADOR_FILES ventilador.cpp)
+SET(PALORED_FILES palored.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
@@ -36,6 +37,7 @@ SET(ESPEJO_NAME espejo)
 SET(PALOMETABACA_NAME palometa_baca)
 SET(PERCHA_NAME percha)
 SET(VENTILADOR_NAME ventilador)
+SET(PALORED_NAME palored)
 
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
@@ -46,6 +48,7 @@ ADD_EXECUTABLE(${ESPEJO_NAME} ${ESPEJO_FILES})
 ADD_EXECUTABLE(${PALOMETABACA_NAME} ${PALOMETABACA_FILES})
 ADD_EXECUTABLE(${PERCHA_NAME} ${PERCHA_FILES})
 ADD_EXECUTABLE(${VENTILADOR_NAME} ${VENTILADOR_FILES})
+ADD_EXECUTABLE(${PALORED_NAME} ${PALORED_FILES})
 
 
 
@@ -57,3 +60,4 @@ TARGET_LINK_LIBRARIES(${ESPEJO_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PALOMETABACA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PERCHA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${VENTILADOR_NAME} OOMLCore OOMLComponents OOMLParts)
+TARGET_LINK_LIBRARIES(${PALORED_NAME} OOMLCore OOMLComponents OOMLParts)
