soporte plafon lampara

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(PALOMETABACA_FILES palometa_baca.cpp)
 SET(PERCHA_FILES percha.cpp)
 SET(VENTILADOR_FILES ventilador.cpp)
 SET(PALORED_FILES palored.cpp)
+SET(GANCHOLAMPARA_FILES gancho_lampara.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
@@ -38,6 +39,7 @@ SET(PALOMETABACA_NAME palometa_baca)
 SET(PERCHA_NAME percha)
 SET(VENTILADOR_NAME ventilador)
 SET(PALORED_NAME palored)
+SET(GANCHOLAMPARA_NAME gancho_lampara)
 
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
@@ -49,6 +51,8 @@ ADD_EXECUTABLE(${PALOMETABACA_NAME} ${PALOMETABACA_FILES})
 ADD_EXECUTABLE(${PERCHA_NAME} ${PERCHA_FILES})
 ADD_EXECUTABLE(${VENTILADOR_NAME} ${VENTILADOR_FILES})
 ADD_EXECUTABLE(${PALORED_NAME} ${PALORED_FILES})
+ADD_EXECUTABLE(${GANCHOLAMPARA_NAME} ${GANCHOLAMPARA_FILES})
+
 
 
 
@@ -61,3 +65,4 @@ TARGET_LINK_LIBRARIES(${PALOMETABACA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PERCHA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${VENTILADOR_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PALORED_NAME} OOMLCore OOMLComponents OOMLParts)
+TARGET_LINK_LIBRARIES(${GANCHOLAMPARA_NAME} OOMLCore OOMLComponents OOMLParts)
