soporte especias inicios

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(PERCHA_FILES percha.cpp)
 SET(VENTILADOR_FILES ventilador.cpp)
 SET(PALORED_FILES palored.cpp)
 SET(GANCHOLAMPARA_FILES gancho_lampara.cpp)
+SET(SOPORTEPECIAS_FILES soporte_especias.cpp)
 
 #Set a variable with the name of your application
 SET(BASE_NAME base)
@@ -40,6 +41,7 @@ SET(PERCHA_NAME percha)
 SET(VENTILADOR_NAME ventilador)
 SET(PALORED_NAME palored)
 SET(GANCHOLAMPARA_NAME gancho_lampara)
+SET(SOPORTEPECIAS_NAME soporte_especias)
 
 #Create and link the executable
 ADD_EXECUTABLE(${BASE_NAME} ${BASE_FILES})
@@ -52,7 +54,7 @@ ADD_EXECUTABLE(${PERCHA_NAME} ${PERCHA_FILES})
 ADD_EXECUTABLE(${VENTILADOR_NAME} ${VENTILADOR_FILES})
 ADD_EXECUTABLE(${PALORED_NAME} ${PALORED_FILES})
 ADD_EXECUTABLE(${GANCHOLAMPARA_NAME} ${GANCHOLAMPARA_FILES})
-
+ADD_EXECUTABLE(${SOPORTEPECIAS_NAME} ${SOPORTEPECIAS_FILES})
 
 
 
@@ -66,3 +68,4 @@ TARGET_LINK_LIBRARIES(${PERCHA_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${VENTILADOR_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${PALORED_NAME} OOMLCore OOMLComponents OOMLParts)
 TARGET_LINK_LIBRARIES(${GANCHOLAMPARA_NAME} OOMLCore OOMLComponents OOMLParts)
+TARGET_LINK_LIBRARIES(${SOPORTEPECIAS_NAME} OOMLCore OOMLComponents OOMLParts)
